// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetCollection Component should render 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Name",
        "sortKey": [Function],
      },
      Object {
        "label": "Last Updated",
        "sortKey": [Function],
      },
      null,
    ]
  }
  defaultSortColumn={[Function]}
  defaultSortDirection="asc"
  filterBox={
    Object {
      "exampleModifiers": Array [
        "id",
        "name",
      ],
      "itemToStringKeys": Array [
        "name",
        "id",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "created_at": "2018-10-21T10:10:10.000Z",
        "id": "id-1",
        "name": "my snippet 1",
        "subaccount_id": 101,
      },
      Object {
        "created_at": "2018-10-21T10:10:10.000Z",
        "id": "id-2",
        "name": "my snippet 2",
        "updated_at": "2018-10-21T10:10:10.000Z",
      },
      Object {
        "created_at": "2018-10-21T10:10:10.000Z",
        "id": "id-3",
        "name": "my snippet 3",
        "shared_with_subaccounts": true,
        "updated_at": "2018-10-21T10:10:10.000Z",
      },
    ]
  }
/>
`;

exports[`SnippetCollection Component should render row data properly 1`] = `
Array [
  <NameTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-1"
    name="my snippet 1"
    subaccount_id={101}
  />,
  <UpdatedAtTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-1"
    name="my snippet 1"
    subaccount_id={101}
  />,
  <ActionsTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-1"
    name="my snippet 1"
    subaccount_id={101}
    toggleDelete={[MockFunction]}
  />,
]
`;

exports[`SnippetCollection Component should render row data properly 2`] = `
Array [
  <NameTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-2"
    name="my snippet 2"
    updated_at="2018-10-21T10:10:10.000Z"
  />,
  <UpdatedAtTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-2"
    name="my snippet 2"
    updated_at="2018-10-21T10:10:10.000Z"
  />,
  <ActionsTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-2"
    name="my snippet 2"
    toggleDelete={[MockFunction]}
    updated_at="2018-10-21T10:10:10.000Z"
  />,
]
`;

exports[`SnippetCollection Component should render row data properly 3`] = `
Array [
  <NameTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-3"
    name="my snippet 3"
    shared_with_subaccounts={true}
    updated_at="2018-10-21T10:10:10.000Z"
  />,
  <UpdatedAtTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-3"
    name="my snippet 3"
    shared_with_subaccounts={true}
    updated_at="2018-10-21T10:10:10.000Z"
  />,
  <ActionsTableData
    created_at="2018-10-21T10:10:10.000Z"
    id="id-3"
    name="my snippet 3"
    shared_with_subaccounts={true}
    toggleDelete={[MockFunction]}
    updated_at="2018-10-21T10:10:10.000Z"
  />,
]
`;
